syntax = "proto3";

option go_package = "gitlab.ozon.dev/ergossteam/homework-3/pkg/api/grpc/v1/book;book";

package book;

message Book {
    int64 id = 1;
    int64 rating = 2;
    int64 author_id = 3;
    string name = 4;
}
